# llm-magnet-connector

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/llm_magnet_connector/image_generator/: __init__.py  _annotate_imgs.py  _generate_curve_images.py  response_to_image.py
src/llm_magnet_connector/llm_interface/: __init__.py  anthropic_conversation_manager.py  llm_client.py  llm_conversation_manager.py  llm_response.py  prompts.py
src/llm_magnet_connector/orchestrator/: __init__.py  main_orchestrator.py
src/llm_magnet_connector/utils/: logger.py
